利用Sweep解决了上下回弹问题

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -91,3 +91,11 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+
+[CoreRedirects]
++FunctionRedirects=(OldName="/Script/PhysicsTest.SpringBackComponent.SnapToTargetPosition",NewName="/Script/PhysicsTest.SpringBackComponent.MoveTargetToParentPosition")
++FunctionRedirects=(OldName="/Script/PhysicsTest.SpringBackComponent.SnapToTargetPosition",NewName="/Script/PhysicsTest.SpringBackComponent.MoveTargetToParentPosition")
++FunctionRedirects=(OldName="/Script/PhysicsTest.SpringBackComponent.MoveTargetToParentPosition",NewName="/Script/PhysicsTest.SpringBackComponent.AlignTargetToParent")
++FunctionRedirects=(OldName="/Script/PhysicsTest.SpringBackComponent.MoveTargetToParentPosition",NewName="/Script/PhysicsTest.SpringBackComponent.AlignTargetToParent")
++FunctionRedirects=(OldName="/Script/PhysicsTest.SpringBackComponent.AlignTargetToParent",NewName="/Script/PhysicsTest.SpringBackComponent.MoveTargetToParent")
++FunctionRedirects=(OldName="/Script/PhysicsTest.SpringBackComponent.AlignTargetToParent",NewName="/Script/PhysicsTest.SpringBackComponent.MoveTargetToParent")
