--- a/PhysicsTest.uproject
+++ b/PhysicsTest.uproject
@@ -24,6 +24,10 @@
 		{
 			"Name": "GeometryScripting",
 			"Enabled": true
+		},
+		{
+			"Name": "MeshModelingToolset",
+			"Enabled": true
 		}
 		
 	]
