--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -99,3 +99,4 @@ ManualIPAddress=
 +FunctionRedirects=(OldName="/Script/PhysicsTest.SpringBackComponent.MoveTargetToParentPosition",NewName="/Script/PhysicsTest.SpringBackComponent.AlignTargetToParent")
 +FunctionRedirects=(OldName="/Script/PhysicsTest.SpringBackComponent.AlignTargetToParent",NewName="/Script/PhysicsTest.SpringBackComponent.MoveTargetToParent")
 +FunctionRedirects=(OldName="/Script/PhysicsTest.SpringBackComponent.AlignTargetToParent",NewName="/Script/PhysicsTest.SpringBackComponent.MoveTargetToParent")
++ClassRedirects=(OldName="/Script/PhysicsTest.VoxelData",NewName="/Script/PhysicsTest.MaVoxelData")
