--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -100,3 +100,4 @@ ManualIPAddress=
 +FunctionRedirects=(OldName="/Script/PhysicsTest.SpringBackComponent.AlignTargetToParent",NewName="/Script/PhysicsTest.SpringBackComponent.MoveTargetToParent")
 +FunctionRedirects=(OldName="/Script/PhysicsTest.SpringBackComponent.AlignTargetToParent",NewName="/Script/PhysicsTest.SpringBackComponent.MoveTargetToParent")
 +ClassRedirects=(OldName="/Script/PhysicsTest.VoxelData",NewName="/Script/PhysicsTest.MaVoxelData")
++PropertyRedirects=(OldName="/Script/PhysicsTest.VoxelCuttingActor.CutToolComponent",NewName="/Script/PhysicsTest.VoxelCuttingActor.CutToolMeshComponent")
